stderr
Printer.java:8: error: cannot find symbol
        this.function = function;
            ^
  symbol: variable function
Printer.java:12: error: cannot find symbol
        String displayText = this.function(number);
                                 ^
  symbol: method function(int)
Printer.java:13: error: cannot find symbol
        displayFunction(displayText);
        ^
  symbol:   method displayFunction(String)
  location: class Printer
Printer.java:19: error: method printNumberResult in class Printer cannot be applied to given types;
            this.printNumberResult(i);
                ^
  required: int,Method
  found:    int
  reason: actual and formal argument lists differ in length
PrinterTest.java:5: error: cannot find symbol
    private Printer printer = new Printer(FizzBuzz.fizzbuzz);
                                                  ^
  symbol:   variable fizzbuzz
  location: class FizzBuzz
PrinterTest.java:11: error: cannot find symbol
        printer.printNumberResult(2, this.display);
                                         ^
  symbol: variable display
PrinterTest.java:16: error: cannot find symbol
        displayed.add(text);
                 ^
  symbol:   method add(String)
  location: variable displayed of type String[]
7 errors
